--- a/checkout-1.html
+++ b/checkout-1.html
@@ -721,11 +721,11 @@
                     <span class="footer-title">Useful links</span>
                     <ul class="footer-nav__list">
                       <li class="footer-nav__item">
-                        <a class="footer-nav__link" href="#">Privacy Policy</a>
+                        <li class="footer-nav__item">
+                        <a class="footer-nav__link" href="privacy_policy.html">Privacy Policy</a>
                       </li>
-                      <li class="footer-nav__item">
-                        <a class="footer-nav__link" href="#">Terms of use</a>
                       </li>
+                      
                       <li class="footer-nav__item">
                         <a class="footer-nav__link" href="#">Support</a>
                       </li>
