--- a/our_story.html
+++ b/our_story.html
@@ -524,7 +524,7 @@
             </div>
             <!-- BEGIN OUR STORY BANNER STYLE 2 END -->
 
-            <!--  -->
+            <!-- BANNER STYLE START -->
             <div class="banner-title__style">
                 <div class="wrapper">
                     <h2>Massa sed condimentum</h2>
@@ -533,7 +533,7 @@
                         lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
                 </div>
             </div>
-            <!--  -->
+            <!-- BANNER STYLE END -->
 
             <!-- GALLERY START -->
             <div class="gallery style2 medium lightbox onscroll-fade-in">
@@ -544,9 +544,9 @@
                     <div class="caption">
                         <h3>Ipsum Dolor</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -556,9 +556,9 @@
                     <div class="caption">
                         <h3>Feugiat Lorem</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -568,9 +568,9 @@
                     <div class="caption">
                         <h3>Magna Amet</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -580,9 +580,9 @@
                     <div class="caption">
                         <h3>Sed Tempus</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -592,9 +592,9 @@
                     <div class="caption">
                         <h3>Ultrices Magna</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -604,9 +604,9 @@
                     <div class="caption">
                         <h3>Sed Tempus</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -616,9 +616,9 @@
                     <div class="caption">
                         <h3>Ipsum Lorem</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -628,9 +628,9 @@
                     <div class="caption">
                         <h3>Magna Risus</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -640,9 +640,9 @@
                     <div class="caption">
                         <h3>Tempus Dolor</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -652,9 +652,9 @@
                     <div class="caption">
                         <h3>Sed Etiam</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -664,9 +664,9 @@
                     <div class="caption">
                         <h3>Magna Lorem</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
                 <article>
@@ -676,14 +676,117 @@
                     <div class="caption">
                         <h3>Ipsum Dolor</h3>
                         <p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
-                        <ul class="actions fixed">
-                            <li><span class="button small">Details</span></li>
-                        </ul>
+                        <span class="button">
+                            <span class="button__text">DETAILS</span>
+                        </span>
                     </div>
                 </article>
             </div>
-
             <!-- GALLERY END -->
+
+            <!-- BANNER STYLE START -->
+            <div class="banner-title__style">
+                <div class="wrapper">
+                    <h2>Ipsum sed consequat</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia
+                        sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem
+                        lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+                </div>
+            </div>
+            <!-- BANNER STYLE END -->
+
+            <!-- STORY BOX START -->
+            <div class="wrapper story-wrapper-container">
+                <div class="inner">
+                    <div class="items style1 medium onscroll-fade-in">
+                        <article>
+                            <span class="icon style2 major fa-diamond"></span>
+                            <h3>Lorem</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-save"></span>
+                            <h3>Ipsum</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-bar-chart"></span>
+                            <h3>Dolor</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-wifi"></span>
+                            <h3>Amet</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-cog"></span>
+                            <h3>Magna</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon style2 major fa-paper-plane"></span>
+                            <h3>Tempus</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-desktop"></span>
+                            <h3>Aliquam</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-refresh"></span>
+                            <h3>Elit</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-hashtag"></span>
+                            <h3>Morbi</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-bolt"></span>
+                            <h3>Turpis</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-envelope"></span>
+                            <h3>Ultrices</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                        <article>
+                            <span class="icon solid style2 major fa-leaf"></span>
+                            <h3>Risus</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget
+                                orci
+                                amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
+                        </article>
+                    </div>
+                </div>
+            </div>
+            <!-- STORY BOX END -->
         </main>
 
 
