complete favorite selected item , done our story page and make changes in header

--- a/checkout-3.html
+++ b/checkout-3.html
@@ -76,9 +76,6 @@
               <div class="header__col header__col_hide-mob">
                 <nav class="header-nav">
                   <ul class="header-nav__list">
-                    <li class="header-nav__item">
-                      <a class="header-nav__link" href="index.html">Home</a>
-                    </li>
                     <li class="header-nav__item js-nav-item">
                       <a class="header-nav__link header-nav__link_arrow js-nav-button" href="shop.html">Shop</a>
                       <div class="hide-nav js-nav-hide">
@@ -125,118 +122,21 @@
                         </div>
                       </div>
                     </li>
-                    <li class="header-nav__item js-nav-item">
-                      <a class="header-nav__link header-nav__link_arrow js-nav-button"
-                        href="collections.html">Collection</a>
-                      <div class="hide-nav js-nav-hide">
-                        <div class="clearfix">
-                          <div class="hide-nav__list hide-nav__image__wrap text-center">
-                            <a href="" class="hide-nav-collecton__image">
-                              <img src="assets/img/collection/collection.jpeg" alt="" />
-                            </a>
-                            <label for="">New Trending '18</label>
-                          </div>
-                          <div class="hide-nav__list hide-nav__image__wrap text-center">
-                            <a href="" class="hide-nav-collecton__image">
-                              <img src="assets/img/collection/collection.jpeg" alt="" />
-                            </a>
-                            <label for="">New Lookbooks</label>
-                          </div>
-                          <div class="hide-nav__list hide-nav__image__wrap text-center">
-                            <a href="" class="hide-nav-collecton__image">
-                              <img src="assets/img/collection/collection.jpeg" alt="" />
-                            </a>
-                            <label for="">Onsale</label>
-                          </div>
-                        </div>
-                      </div>
+                    <li class="header-nav__item">
+                      <a class="header-nav__link" href="our_story.html">Our Story</a>
                     </li>
                     <li class="header-nav__item logo_nav">
                       <div class="header__col text-center">
-                        <a class="logo" href="#">
+                        <a class="logo" href="index.html">
                           <h3>Logo</h3>
                         </a>
                       </div>
                     </li>
-                    <li class="header-nav__item js-nav-item active">
-                      <a class="header-nav__link header-nav__link_arrow js-nav-button" href="about.html">Pages</a>
-                      <div class="hide-nav js-nav-hide">
-                        <div class="clearfix">
-                          <ul class="hide-nav__list hide-nav__list_wrap">
-                            <li class="hide-nav__item">
-                              <label>Page Set 1</label>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="about.html">About us</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="shop.html">Catalog</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="product_page.html">Product page</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="wishlist.html">Wishlist</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="my_profile.html">My Profile</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="404.html">404</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="privacy_policy.html">Privacy Policy</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="terms_of_use.html">Terms of Use</a>
-                            </li>
-                          </ul>
-                          <ul class="hide-nav__list hide-nav__list_wrap">
-                            <li class="hide-nav__item">
-                              <label>Page Set 2</label>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="login.html">Login</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="registration.html">Registration</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="faq.html">FAQ's</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="cart.html">Cart</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="checkout-1.html">Checkout 1</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="checkout-2.html">Checkout 2</a>
-                            </li>
-                            <li class="hide-nav__item active">
-                              <a class="hide-nav__link" href="checkout-3.html">Checkout 3</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </li>
-                    <li class="header-nav__item header-nav_dropdown__item js-nav-item">
-                      <a class="header-nav__link header-nav__link_arrow js-nav-button" href="blog.html">Blog</a>
-                      <div class="hide-nav dropdown-hide__nav js-nav-hide">
-                        <div class="clearfix">
-                          <ul class="hide-nav__list hide-nav__list_wrap">
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="blog.html">Blog</a>
-                            </li>
-                            <li class="hide-nav__item">
-                              <a class="hide-nav__link" href="post.html">Blog Post</a>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
+                    <li class="header-nav__item">
+                      <a class="header-nav__link" href="about.html">About us</a>
                     </li>
                     <li class="header-nav__item">
-                      <a class="header-nav__link" href="contacts.html">Contact</a>
+                      <a class="header-nav__link" href="contacts.html">Contact us</a>
                     </li>
                   </ul>
                 </nav>
@@ -245,14 +145,12 @@
           </div>
           <div class="header__right">
             <ul class="user-nav">
-
               <li class="user-nav__item">
                 <a class="user-nav__link" href="wishlist.html">
                   <span class="user-nav__icon user-nav__icon_3"></span>
                   <span class="user-nav__text">0</span>
                 </a>
               </li>
-
             </ul>
           </div>
         </div>
