--- a/shop.html
+++ b/shop.html
@@ -607,6 +607,7 @@
       } else {
         localStorage.setItem('favouriteProduct', JSON.stringify([favouriteProduct]))
       }
+      $(".user-nav__text").html((JSON.parse(localStorage.getItem("favouriteProduct")) || 0).length);
     }
 
     function createData(myArray) {
