Add Remove count on remove functionality

--- a/wishlist.html
+++ b/wishlist.html
@@ -539,6 +539,7 @@
           localStorage.removeItem('favouriteProduct');
         }
       }
+      $(".user-nav__text").html((JSON.parse(localStorage.getItem("favouriteProduct")) || 0).length);
     }
 
     wishListData(favouriteProduct, "wishlist");
